feat(ordem-servico): popula serviços solicitados e adiciona atribuição de mecânico e início de diagnóstico